// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home tests should match the snapshot test 1`] = `
<div
  className="main-container"
>
  <Controls
    selectControl={[Function]}
    selectedControl=""
  />
  <DataViz
    selectedControl=""
  />
</div>
`;

exports[`Home tests should render a form to add a new employee 1`] = `
<div
  className="main-container"
>
  <Controls
    selectControl={[Function]}
    selectedControl="Add Employee"
  />
  <DataViz
    selectedControl="Add Employee"
  />
  <div
    className="add-popup"
  >
    <form
      className="popup-form"
      onSubmit={[Function]}
    >
      <button
        className="close-popup"
        onClick={[Function]}
      >
        X
      </button>
      <h4>
        Add New Employee
      </h4>
      <label
        htmlFor="employee-name"
      >
        Name:
        <input
          className="employee_name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
        />
      </label>
      <label
        htmlFor="employee-position"
      >
        Position:
        <input
          className="employee_position"
          onChange={[Function]}
          placeholder="Position"
          type="text"
        />
      </label>
      <label
        htmlFor="employee-email"
      >
        Email:
        <input
          className="employee_email"
          onChange={[Function]}
          placeholder="Email"
          type="email"
        />
      </label>
      <label
        htmlFor="employee-phone"
      >
        Phone:
        <input
          className="employee_phone"
          onChange={[Function]}
          placeholder="Phone"
          type="text"
        />
      </label>
      <input
        type="submit"
        value="Submit"
      />
    </form>
  </div>
</div>
`;

exports[`Home tests should render a form to add a new project 1`] = `
<div
  className="main-container"
>
  <Controls
    selectControl={[Function]}
    selectedControl="Add Project"
  />
  <DataViz
    selectedControl="Add Project"
  />
  <div
    className="add-popup"
  >
    <form
      className="popup-form"
      onSubmit={[Function]}
    >
      <button
        className="close-popup"
        onClick={[Function]}
      >
        X
      </button>
      <h4>
        Add New Project
      </h4>
      <label
        htmlFor="project-name"
      >
        Project Name:
        <input
          className="project_name"
          onChange={[Function]}
          placeholder="Project Name"
          type="text"
        />
      </label>
      <label
        htmlFor="project-location"
      >
        Location:
        <input
          className="project_location"
          onChange={[Function]}
          placeholder="Location"
          type="text"
        />
      </label>
      <label
        htmlFor="project-union"
      >
        Union:
        <select
          className="project_union"
          onChange={[Function]}
        >
          <option
            value="true"
          >
            Yes
          </option>
          <option
            value="false"
          >
            No
          </option>
        </select>
      </label>
      <label
        htmlFor="project-public"
      >
        Public:
        <select
          className="project_public"
          onChange={[Function]}
        >
          <option
            value="true"
          >
            Yes
          </option>
          <option
            value="false"
          >
            No
          </option>
        </select>
      </label>
      <input
        type="submit"
        value="Submit"
      />
    </form>
  </div>
</div>
`;
